--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 
 # Ignore this .cache
 /.cache
-/.ruby-version
+# Dont ignore these apparently, dumb Tate /.ruby-version
 
 # Ignore .DS_store file
 .DS_Store
